--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "vue-cli-service serve --open"
   },
   "dependencies": {
     "core-js": "^3.6.4",
     "firebase": "^7.8.1",
+    "mdbvue": "6.4.0",
     "vue": "^2.6.11",
     "vuefire": "^2.2.1"
   },
@@ -20,6 +22,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "vue-cli-plugin-mdb": "~2.0.4",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
